tests/baselines/reference/parserES5ComputedPropertyName9.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName9.ts(2,4): error TS1166: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName9.ts(2,9): error TS2304: Cannot find name 'Type'.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName9.ts (2 errors) ====
    class C {
       [e]: Type
       ~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
            ~~~~
!!! error TS2304: Cannot find name 'Type'.
    }